--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'com.android.support:recyclerview-selection:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
